@@ -1483,9 +1483,13 @@ OK
             <para>
               Finds songs in the db that are exactly
               <varname>WHAT</varname>.  <varname>TYPE</varname> can
-              be any tag supported by MPD, or one of the two special
+              be any tag supported by MPD, or one of the three special
               parameters — <parameter>file</parameter> to search by
-              full path (relative to database root), and
+
+              full path (relative to the music directory),
+              <parameter>in</parameter> to restrict the search to
+              songs in the given directory (also relative to the music
+              directory) and
               <parameter>any</parameter> to match against all
               available tags.  <varname>WHAT</varname> is what to find.
             </para>
